--- a/index.html
+++ b/index.html
@@ -15,43 +15,40 @@
   </head>
   <body>
     <div id="container">
-      <div id="profile" >
+      <div id="profile">
         <img src="./assets/avatar.png" alt="avatar, maik sorindo" />
         <p>@mtsbotelhosantos</p>
       </div>
-      <div id="switch" onclick="toggleMode()" >
-        <button>
-
-        </button>
+      <div id="switch" onclick="toggleMode()">
+        <button></button>
         <span></span>
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Inscrever-se no NLW</a>
+          <a href="#" target="_blank">Meu portifólio </a>
+          
         </li>
         <li>
-          <a href="#" target="_blank">Baixar meu e-book</a>
+          <a href="#" target="_blank">Escrever aqui </a>
         </li>
         <li>
-          <a href="#" target="_blank">Ver meu portifólio</a>
+          <a href="#" target="_blank">Escrever aqui</a>
         </li>
         <li>
-          <a href="#" target="_blank">Conheça o Explorer</a>
+          <a href="#" target="_blank">Escrever aqui</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/mtsbotelhosantos" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a>
-        <a href="#" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="#" target="_blank">
+         <a href="https://www.linkedin.com/in/matheus-botelho-dos-santos-055936207" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
+        <a href="https://www.instagram.com/mtsbotelho/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+       
       </div>
     </div>
     <script
